--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.19.0",
     "fastify": "^2.9.0",
     "fastify-static": "^2.5.0",
-    "fastify-rate-limit": "^2.4.0"
+    "fastify-rate-limit": "^2.4.0",
+    "open-graph-scraper": "^3.6.1"
   },
   "engines": {
     "node": "8.x"
